@@ -3,6 +3,8 @@ CHANGES-1.1.txt
 
 CHANGES IN CUPS V1.1.17
 
+	- Now set the LC_TIME locale category to get the
+	  properly localized time string.
 	- Fixed a problem in the scheduler that would cause the
 	  web interface problems when adding, modifying, or
 	  configuring a printer or class.
